# modulink-rs

./: Cargo.toml  MACRO_MIGRATION_TRACKER.md  README.md
.github/workflows/: publish.yml
docs/: CHAIN_MACRO_PATTERNS.md  CHEATSHEET.md  CHEATSHEET_ADVANCED.md  TODO_MODULINK_MACROS.md  USER_GUIDE.md
src/: lib.rs  macros.rs
src/chains/: chain_macro.rs  mod.rs
src/cli/: main.rs
src/context/: mod.rs
src/links/: mod.rs
src/listeners/: http_listener.rs  mod.rs
src/middleware/: mod.rs
tests/: debug_middleware.rs  test_branching_ergonomic.rs  test_branching_generic.rs  test_chain.rs  test_chain_generic.rs  test_chains_ergonomic.rs  test_chains_generic.rs  test_context_ergonomic.rs  test_context_generic.rs  test_context_link.rs  test_error_ergonomic.rs  test_error_generic.rs  test_links_ergonomic.rs  test_links_generic.rs  test_listeners.rs  test_middleware_ergonomic.rs  test_middleware_generic.rs  test_multilink_ergonomic.rs  test_multilink_generic.rs
